--- a/pom.xml
+++ b/pom.xml
@@ -100,5 +100,11 @@
             <artifactId>ikonli-materialdesign-pack</artifactId>
             <version>11.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
