--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,51 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>name.mymiller</groupId>
-    <artifactId>name.mymiller</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>extensions</artifactId>
+    <version>0.0.1-BETA-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Java extensions to base Java</description>
+    <url>https://www.mymiller.name/wordpress/portfolio/java-extensions/</url>
+
+    <licenses>
+        <license>
+            <name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Jeffery Miller</name>
+            <email>jeff@mymiller.name</email>
+            <organization>MyMiller</organization>
+            <organizationUrl>https://www.mymiller.name/wordpress/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/Ghost-Programmer/mymiller_extensions</connection>
+        <developerConnection>scm:git:ssh://github.com:Ghost-Programmer/mymiller_extensions.git</developerConnection>
+        <url>https://github.com/Ghost-Programmer/mymiller_extensions.git</url>
+    </scm>
+
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <github.global.server>github</github.global.server>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <finalName>name.mymiller</finalName>
         <plugins>
@@ -36,6 +74,35 @@
                     </execution>
                 </executions>
 
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.11</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message> <!-- git commit message -->
+                    <noJekyll>true</noJekyll>  <!-- disable webpage processing -->
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                    <branch>refs/heads/mvn-repo</branch> <!-- remote branch name -->
+                    <includes><include>**/*</include></includes>
+                    <repositoryName>mymiller_extensions</repositoryName> <!-- github repo name -->
+                    <repositoryOwner>Ghost-Programmer</repositoryOwner> <!-- organization or user name  -->
+                </configuration>
+                <executions> <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
