--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Java extensions to base Java</description>
-    <url>https://www.mymiller.name/wordpress/portfolio/java-extensions/</url>
+    <url>https://www.mymiller.name/wordpress/portfolio/mymiller-libs/</url>
 
     <licenses>
         <license>
@@ -51,29 +51,11 @@
     </distributionManagement>
 
     <build>
-        <finalName>name.mymiller</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
-
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
